# aoe-elo-calculator

./: CMakeLists.txt  README.md
.devcontainer/: devcontainer.json
src/: CMakeLists.txt
src/modules/: calculator.cxx  main.cxx  player.cxx  point.cxx  team.cxx
src/source/: kdpoint.cpp  main.cpp
